# chatgpt-stats

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
src/chatgpt-stats/: plot.py
src/chatgpt_stats/: extract.py  plot.py  pricing.py
